# net_to_gross_calculator

./: .bumpversion.cfg  .dockerignore  README.md  docker-compose-test.yml  docker-compose.yml  setup.cfg
.github/workflows/: deploy.yml  integration.yml  unit_tests.yml
api/: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  tox.ini
api/api/: __init__.py  __main__.py  data.py  main.py  models.py  routes.py
api/tests/: test_filter.py  test_model.py
app/: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  tox.ini
app/app/: __init__.py  main.py
app/tests/: test_app.py  (+2 more)
geong_common/: MANIFEST.in  requirements_dev.txt  setup.cfg  tox.ini
geong_common/geong_common/: exceptions.py  files.py  log.py
geong_common/geong_common/assets/templates/: geong.pptx  geong_pptx.toml
geong_common/geong_common/config/: __init__.py  config.py  geong.toml  validators.py
geong_common/geong_common/data/: composition.py  models.py  net_gross.py
geong_common/geong_common/readers/: __init__.py  api.py  local.py
geong_common/geong_common/reports/: __init__.py  powerpoint.py
geong_common/tests/: simplified_elements.csv  test_data_composition.py  test_exceptions.py  test_filter.py  test_model.py
scripts/: README.md  annotate_ppt.py  check_unique.py  create_synthetic_data.py  describe_shallow_data.py  tox.ini
tests/: Dockerfile  requirements.txt  test_integration.py
(+50 files in other folders)
