[metadata]
name = geong_common
version = 1.1.1
description = Geo:N:G Utils
long_description = file: README.md

[options]
include_package_data = True
packages = find:
install_requires =
    iteround
    loguru
    opencensus-ext-azure
    pyconfs[toml]
    pydantic
    pyplugs
    python-pptx
    requests
    statsmodels
